# py

./: .gitignore  README.md  pyproject.toml  setup.py
src/: id.py
src/shrt_id/: __init__.py
tests/: t1.py
